<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="#EEEAEE"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/top_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/women2"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margintop2"
                android:layout_marginTop="@dimen/margintop4"
                android:text="Login to\nyour account"
                android:textColor="@color/white"
                android:textSize="@dimen/activitytext"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margintop2"
                android:layout_marginTop="@dimen/margintop2"
                android:text="@string/email"
                android:textColor="@color/textcolor2"
                android:textSize="@dimen/activitytext4"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margintop8"
                android:text="@string/password"
                android:textColor="@color/textcolor2"
                android:textSize="@dimen/activitytext4"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margintop1"
                android:text="@string/forget_password"
                android:textColor="@color/textcolor2"
                android:textSize="@dimen/activitytext5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_marginTop="@dimen/margintop6"
                android:background="@drawable/styleedittext"
                android:backgroundTint="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/margintop1"
                android:textColorHint="@color/textcolor3"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_marginTop="@dimen/margintop6"
                android:background="@drawable/styleedittext"
                android:backgroundTint="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/margintop1"
                android:textColorHint="@color/textcolor3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margintop9"
                android:layout_marginTop="@dimen/margintop10"
                android:src="@drawable/facebook"
                app:layout_constraintStart_toStartOf="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margintop10"
                android:src="@drawable/google"
                app:layout_constraintEnd_toStartOf="@+id/imageView6"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margintop10"
                android:layout_marginEnd="@dimen/margintop9"
                android:src="@drawable/twitter"
                app:layout_constraintEnd_toEndOf="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButton2"
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_marginTop="@dimen/margintop2"
                android:background="@drawable/stylebutton2"
                android:drawableEnd="@drawable/circle"
                android:drawablePadding="-53dp"
                android:paddingEnd="@dimen/padding1"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/btntextsize1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reg"
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_marginTop="@dimen/margintop2"
                android:background="@drawable/stylebutton"
                android:text="@string/don_t_have"
                android:textAllCaps="false"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/activitytext6"
                app:layout_constraintEnd_toEndOf="@+id/appCompatButton2"
                app:layout_constraintStart_toStartOf="@+id/appCompatButton2"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButton2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
